# trainpress

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  ]
benches/: handler_bench.rs  json_bench.rs  router_bench.rs
examples/: hello_world.rs  middleware_example.rs  user_crud.rs
src/: app.rs  error.rs  extract.rs  handler.rs  lib.rs  main.rs  middleware.rs  response.rs  router.rs  server.rs
tests/: integration_tests.rs
