[package]
name = "trainpress"
version = "0.1.0"
edition = "2024"

[features]
server = []
default = []

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
form_urlencoded = "1"
futures-util = { version = "0.3", default-features = false }
thiserror = "1"
matchit = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
